# Azure-Client-Website

./: pyproject.toml  server.py
views/: index.html
