[tool.poetry]
name = "repl_python3_beta_Azure-Client-Website"
version = "0.1.0"
description = ""
authors = ["UCYT5040 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
generators = "^2020.4.27"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
